--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "disneyproject",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://MteoRamirez.github.io/disney-plus",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -20,6 +21,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
